tests/ui/closures/issue-111932.stderr
error[E0277]: the size for values of type `(dyn Foo + 'static)` cannot be known at compilation time
  --> $DIR/issue-111932.rs:4:20
   |
LL |     foos.for_each(|foo| {
   |                    ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Foo + 'static)`
   = note: all function arguments must have a statically known size
   = help: unsized fn params are gated as an unstable feature

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
